Fixed issues with Faqs Giscus Iframe component (#883)
* chore: using right secret

* chore: fixed iframe being cropped and updated home page

--- a/app/styles/globals.css
+++ b/app/styles/globals.css
@@ -7,7 +7,6 @@ body {
   padding: 0;
   margin: 0;
   font-family: 'BCSans', Verdana, Arial, sans-serif;
-
   font-size: 16px !important;
 }
 
@@ -173,4 +172,15 @@ ul.error-detail {
 
 .link::after {
   content: url('data:image/svg+xml;utf8,<svg focusable="false" role="img" color="%231a5a96" title="fa icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" width="15px" class="sc-kgflAQ diecks"><path fill="currentColor" d="M432,320H400a16,16,0,0,0-16,16V448H64V128H208a16,16,0,0,0,16-16V80a16,16,0,0,0-16-16H48A48,48,0,0,0,0,112V464a48,48,0,0,0,48,48H400a48,48,0,0,0,48-48V336A16,16,0,0,0,432,320ZM488,0h-128c-21.37,0-32.05,25.91-17,41l35.73,35.73L135,320.37a24,24,0,0,0,0,34L157.67,377a24,24,0,0,0,34,0L435.28,133.32,471,169c15,15,41,4.5,41-17V24A24,24,0,0,0,488,0Z"></path></svg>');
+}
+
+::part(iframe) {
+  margin: auto;
+  display: flex;
+  min-height: 700px;
+}
+
+.comments-container {
+  max-height: 300px;
+  overflow-y: scroll;
 }
